--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@stripe/stripe-js": "^5.5.0",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
