--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
@@ -22,6 +23,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
+    "stripe": "^17.6.0",
     "tailwindcss": "^4.0.0",
     "zustand": "^5.0.3"
   },
