--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.5",
     "lucide-react": "^0.474.0",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-confetti": "^6.2.2",
     "react-dom": "^18.3.1",
